Add 'recordWithMessageTexts' method